# web-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sh  build_image.sh  deploy_helm.sh  docker-compose.yml  format.sh  generate_cert.sh  run.sh  run_tests.sh
.github/workflows/: master.yml  rust.yml
acl/: Cargo.toml  Dockerfile
app/: Cargo.toml
app/src/: endpoints.rs  models.rs
domain/: Cargo.toml
domain/src/: lib.rs  queries.rs
domain_impl/: Cargo.toml
domain_impl/src/: handlers.rs  ports.rs
helm/: Chart.yaml  values.yaml
helm/templates/acl/: deployment.yml
helm/templates/api/: deployment.yml  ingress.yml  service.yml
helm/templates/kafka/: deployment.yml  service.yml
helm/templates/mongodb/: deployment.yml  persistent-volume-claim.yml  persistent-volume.yml  sateful-set.yml  service.yml
helm/templates/zookeeper/: deployment.yml  service.yml
host/: Cargo.toml  Dockerfile
host/src/: composition.rs  conf.rs  factory.rs  lib.rs  main.rs
infra/: Cargo.toml
infra/src/: lib.rs  repositories.rs
integration-tests/tests/: gen.rs  sut.rs  user_tests.rs
integrtion-tests/: Cargo.toml
integrtion-tests/tests/: sut.rs  user_tests.rs
messaging/: Cargo.toml
messaging/src/: fake_kafka.rs  kafka.rs  lib.rs
src/: Cargo.toml  Makefile  analyze.sh  build_images.sh  contracts.rs  dal.rs  docker-compose.yml  format.sh  lib.rs  main.rs  run.sh  run_tests.sh  user.rs
src/acl/: Cargo.toml  Dockerfile
src/acl/src/: main.rs
src/api/: Cargo.toml
src/api/src/: endpoints.rs  lib.rs
src/app/: endpoints.rs  mod.rs  models.rs
src/contracts/: commands.rs  mod.rs  queries.rs
src/domain/: Cargo.toml  handlers.rs  mod.rs  ports.rs
src/domain/src/: commands.rs  events.rs
src/domain_impl/: Cargo.toml
src/domain_impl/src/: lib.rs
src/host/: Cargo.toml  Dockerfile
src/host/src/: composition.rs  main.rs
src/infra/: Cargo.toml  repositories.rs
src/infra/src/: repositories.rs  tracker.rs
src/integration-tests/: Cargo.toml
src/integration-tests/tests/: gen.rs  sut.rs  user_tests.rs
src/messaging/: Cargo.toml
src/messaging/src/: fake_kafka.rs  kafka.rs
src/root/: composition_root.rs  mod.rs
tests/: gen.rs  integration_tests.rs  sut.rs  test.rs
tests/user/: mod.rs  user_tests.rs
