[package]
name = "web-api"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.8.0"
env_logger = "0.10.0"
mongodb = "2.7.0"
serde = "1.0.188"
serde_derive = "1.0.188"
async-trait = "0.1.73"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }