[package]
name = "messaging"
version = "0.0.1"
edition = "2021"


[dependencies]
rdkafka = { version = "0.35.0", features = ["cmake-build"] }
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0.108"
serde = { version = "1.0.189", features = ["derive"] }
async-trait = "0.1.74"
log = { version = "0.4.20", features = [] }