[workspace]
resolver = "2"
members = [
    "api",
    "domain",
    "domain_impl",
    "host",
    "infra",
    "integration-tests",
    "acl"
]

[workspace.dependencies]
actix-web = "4.4.0"
async-trait = "0.1.73"
tokio = { version = "1.33.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.20"
serde_derive = "1.0.188"
serde = "1.0.188"
serde_json = "1.0.108"
utoipa = { version = "4", features = ["actix_extras"] }
mongodb = "3.1.0"
bson = "2.7.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
rand = "0.8.5"
actix-rt = "2.8.0"
reqwest = { version = "0.12.8", features = ["json"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }