[package]
name = "host"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
env_logger = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

api = { path = "../api" }
domain = { path = "../domain" }
domain_impl = { path = "../domain_impl" }
infra = { path = "../infra" }
messaging = { path = "../messaging" }