[package]
name = "tests"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = { workspace = true }
actix-rt = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
api = { path = "../api" }
domain = { path = "../domain" }
domain_impl = { path = "../domain_impl" }
infra = { path = "../infra" }
messaging = { path = "../messaging" }
host = { path = "../host" }


[[test]]
name = "user_tests"
path = "tests/user_tests.rs"